Add command SPI, drop scala, add logger command